--- a/cnam-web/1-architecture-client-serveur.cfg
+++ b/cnam-web/1-architecture-client-serveur.cfg
@@ -1,6 +1,6 @@
 [landslide]
 theme       = /home/florent/dev/landslide/avalanche/avalanche/
-source      = 1-architecture-client-serveur.rst
+source      = 1-architecture-client-serveur.md
 destination = ./1-architecture-client-serveur.html
 embed       = True
 linenos     = no
