--- a/cnam-web/2-introduction-au-langage-html.cfg
+++ b/cnam-web/2-introduction-au-langage-html.cfg
@@ -1,8 +1,10 @@
 [landslide]
-theme       = /home/florent/dev/landslide/avalanche/avalanche/
-css         = /home/florent/dev/landslide/avalanche/custom_css/pygments/monokai.css 
-source      = 2-introduction-au-langage-html.md
-destination = ./2-introduction-au-langage-html.html
-embed       = True
+theme = ../avalanche/avalanche/
+css = ../www/theme_extra/css/pygments/monokai.css 
+      ../www/theme_extra/css/override_avalanche.css
+source = 2-introduction-au-langage-html.md
+destination = ../www/2-introduction-au-langage-html.html
+relative = True
+embed = True
 linenos     = no
 
