--- a/cnam-web/1-architecture-client-serveur.cfg
+++ b/cnam-web/1-architecture-client-serveur.cfg
@@ -1,7 +1,9 @@
 [landslide]
-theme       = /home/florent/dev/landslide/avalanche/avalanche/
+theme = ../avalanche/avalanche/
+css = ../www/theme_extra/css/pygments/monokai.css 
+      ../www/theme_extra/css/override_avalanche.css
 source      = 1-architecture-client-serveur.md
-destination = ./1-architecture-client-serveur.html
-embed       = True
+destination = ../www/1-architecture-client-serveur.html
+relative = True
+embed = True
 linenos     = no
-
