--- a/cnam-web/3-creer-une-mise-en-page.cfg
+++ b/cnam-web/3-creer-une-mise-en-page.cfg
@@ -1,8 +1,9 @@
 [landslide]
-theme       = /home/florent/dev/landslide/avalanche/avalanche/
-css         = /home/florent/dev/landslide/avalanche/custom_css/pygments/monokai.css 
+theme = ../avalanche/avalanche/
+css = ../www/theme_extra/css/pygments/monokai.css 
+      ../www/theme_extra/css/override_avalanche.css
 source      = 3-creer-une-mise-en-page.md
-destination = ./3-creer-une-mise-en-page.html
-embed       = True
+destination = ../www/3-creer-une-mise-en-page.html
+relative = True
+embed = True
 linenos     = no
-
