--- a/cnam-web/4-les-tableaux.cfg
+++ b/cnam-web/4-les-tableaux.cfg
@@ -1,8 +1,9 @@
 [landslide]
-theme       = /home/florent/dev/landslide/avalanche/avalanche/
-css         = /home/florent/dev/landslide/avalanche/custom_css/pygments/monokai.css 
+theme = ../avalanche/avalanche/
+css = ../www/theme_extra/css/pygments/monokai.css 
+      ../www/theme_extra/css/override_avalanche.css
 source      = 4-les-tableaux.md
-destination = ./4-les-tableaux.html
-embed       = True
+destination = ../www/4-les-tableaux.html
+relative = True
+embed = True
 linenos     = no
-
