--- a/python-nantes/presentation-python-nantes.cfg
+++ b/python-nantes/presentation-python-nantes.cfg
@@ -2,9 +2,9 @@
 theme = ../avalanche/avalanche/
 css = ../www/theme_extra/css/pygments/monokai.css 
       ../www/theme_extra/css/override_avalanche.css
-      ./presentation.css
-source      = presentation.md
-destination = ../www/presentation.html
+      ./presentation-python-nantes.css
+source      = presentation-python-nantes.md
+destination = ../www/presentation-python-nantes.html
 relative = True
 embed = True
 linenos     = no
